@@ -118,37 +118,37 @@ gimp_display_shell_dnd_init (GimpDisplayShell *shell)
 {
   g_return_if_fail (GIMP_IS_DISPLAY_SHELL (shell));
 
-  gimp_dnd_uri_list_dest_add  (GTK_WIDGET (shell->canvas),
+  gimp_dnd_uri_list_dest_add  (shell->canvas,
                                gimp_display_shell_drop_uri_list,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_LAYER,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_LAYER,
                                gimp_display_shell_drop_drawable,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_LAYER_MASK,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_LAYER_MASK,
                                gimp_display_shell_drop_drawable,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_CHANNEL,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_CHANNEL,
                                gimp_display_shell_drop_drawable,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_VECTORS,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_VECTORS,
                                gimp_display_shell_drop_vectors,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_PATTERN,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_PATTERN,
                                gimp_display_shell_drop_pattern,
                                shell);
-  gimp_dnd_viewable_dest_add  (GTK_WIDGET (shell->canvas), GIMP_TYPE_BUFFER,
+  gimp_dnd_viewable_dest_add  (shell->canvas, GIMP_TYPE_BUFFER,
                                gimp_display_shell_drop_buffer,
                                shell);
-  gimp_dnd_color_dest_add     (GTK_WIDGET (shell->canvas),
+  gimp_dnd_color_dest_add     (shell->canvas,
                                gimp_display_shell_drop_color,
                                shell);
-  gimp_dnd_svg_dest_add       (GTK_WIDGET (shell->canvas),
+  gimp_dnd_svg_dest_add       (shell->canvas,
                                gimp_display_shell_drop_svg,
                                shell);
-  gimp_dnd_component_dest_add (GTK_WIDGET (shell->canvas),
+  gimp_dnd_component_dest_add (shell->canvas,
                                gimp_display_shell_drop_component,
                                shell);
-  gimp_dnd_pixbuf_dest_add    (GTK_WIDGET (shell->canvas),
+  gimp_dnd_pixbuf_dest_add    (shell->canvas,
                                gimp_display_shell_drop_pixbuf,
                                shell);
 }
