@@ -1120,6 +1120,10 @@ gimp_display_shell_empty (GimpDisplayShell *shell)
   gimp_display_shell_scale_setup (shell);
   gimp_display_shell_scaled (shell);
 
+  gimp_display_shell_set_cursor (shell, GIMP_CURSOR_MOUSE,
+                                 GIMP_TOOL_CURSOR_NONE,
+                                 GIMP_CURSOR_MODIFIER_NONE);
+
   gimp_statusbar_empty (GIMP_STATUSBAR (shell->statusbar));
 
   gimp_display_shell_appearance_update (shell);
